--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
          
         <meta charset="utf-8">
         <title> Universtar BT21 </title>
+        <link rel="stylesheet" href="mystyle.css"
     
     </head>
     <body>
