--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
         </iframe>
         <p align="Justify"> Hailing from Planet BT, Prince TATA dreams to spread love across the galaxy. Deciding that destiny is at hand, TATA summons guardian robot VAN to prepare for an interstellar journey to Earth. Shortly after arrival, the Prince concludes that the most effective means to win over the hearts of earthlings is to become a super, no... something much more ambitious. A UNIVERSTAR. Realizing that a collective effort is crucial, TATA & VAN scout for like-minded hopefuls to share in the dream. Soon they discover 6- KOYA, RJ, SHOOKY, MANG, CHIMMY and COOKY- to become what will be known as the most influential pop-culture sensation the galaxy has ever witnessed. BT21.</p>
     </div>
-    <div class="content">
+    <div class="b">
         <h2 align="Center">BT21 'Would You' official Audio</h2>
         <audio controls>
             <source src="BT21 Would You.mp3" type="audio/mp3">
           </audio>
-        
         <h2 align="Center"> About BT21 </h2>
          <p align="Justify"> BT21; the brand and its characters were born from a collaborative project between LINE FRIENDS and BTS. Since its launch in 2017, the brand has captured the hearts and minds of youths worldwide with its charming designs, unique concept and thoughtful storytelling.
-            Significant effort has been made in communicating with the global fan-base in the making of this concept, which continues to this day. The rapid growth supported by fans has led to the expansion of the brand into the BT21 UNIVERSE.
-            
-            Online shops and physical stores located worldwide are providing consumers with unique brand experience and quality products, and digital presence in the form of animated content and games are going strong. Collaborations with trendsetting brands have picked up as well with even more partnerships on the horizon, culturing the brand scope into an even more youthful, vibrant outlook.</p>
+            Significant effort has been made in communicating with the global fan-base in the making of this concept, which continues to this day. The rapid growth supported by fans has led to the expansion of the brand into the BT21 UNIVERSE. Online shops and physical stores located worldwide are providing consumers with unique brand experience and quality products, and digital presence in the form of animated content and games are going strong. Collaborations with trendsetting brands have picked up as well with even more partnerships on the horizon, culturing the brand scope into an even more youthful, vibrant outlook.</p>
     </div> 
            <table>
             <thead>
